#5553 Add DocFinder and caching around the doc stores rather than the explorer.